@@ -63,7 +63,7 @@
 {
   [debuggerView runProgram: debuggerPath
 		inCurrentDirectory: [path stringByDeletingLastPathComponent]
-		withArguments: [[NSArray alloc] initWithObjects: @"--args", path, nil]
+		withArguments: [[NSArray alloc] initWithObjects: @"-f", @"--args", path, nil]
 		logStandardError: YES];
 }   
 
